--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,20 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="scss/custom.scss" rel="stylesheet">
+    <link href="bootstrap-min/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="scss/index.css">
 
 </head>
 
 <body>
 
+
+
+
 <div class="container-fluid">
     <div class="row header">
         <div class="col">
-            <h1>Hello!</h1>
-            <input type="search" class="my-comp">
+            <h1 class="responsive"></h1>
         </div>
     </div>
 </div>
@@ -27,6 +29,6 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="bootstrap-min/js/bootstrap.min.js"></script>
 </body>
 </html>
