--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,7 @@
 <div class="container-fluid">
     <div class="row header">
         <div class="col">
-            <div class="test">
-
-            </div>
+            <div class="test">ciao</div>
             <h1 class="responsive"></h1>
         </div>
     </div>
