--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="scss/bobooky.css">
-    <link rel="stylesheet" href="scss/navbar.css">
-    <link rel="stylesheet" href="scss/index.css">
+    <link rel="stylesheet" href="scss/bootstrap/bobooky.css">
+    <link rel="stylesheet" href="scss/components/navbar.css">
+    <link rel="stylesheet" href="scss/index/index.css">
+    <link rel="stylesheet" href="scss/components/carousel.css">
 
 </head>
 
@@ -59,8 +60,37 @@
         </div>
     </div>
 </div>
-<div class="section d-flex justify-content-center min-vh-100 bg-secondary flex-column">
-    <h1 class="display-2">Search 700 books</h1>
+<div class="section d-flex justify-content-center min-vh-100 flex-column">
+    <div class="container-fluid">
+        <div id="carouselExampleControls" class="carousel slide books" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item">
+                    <div class="d-flex justify-content-center">
+                        <div class="card book template m-2">
+                            <img class="card-img-top"
+                                 src="https://images.gr-assets.com/books/1356422925l/13450339.jpg"
+                                 alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title"></h5>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <a class="carousel-control carousel-control-prev" href="#carouselExampleControls" role="button"
+               data-slide="prev">
+                <span class="fa fa-lg fa-chevron-left text-dark" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="fa fa-lg fa-chevron-right text-dark" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+    </div>
 </div>
 <div class="container">
     <div class="row header">
@@ -69,9 +99,10 @@
         </div>
     </div>
 </div>
-<script src="../node_modules/jquery/dist/jquery.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<script src="jquery/dist/jquery.js"></script>
+<script src="bootstrap/dist/js/bootstrap.js"></script>
 <script src="js/navbar/navbar.js"></script>
+<script src="js/index/index.js" type="module"></script>
 
 </body>
 </html>
