Working on account page

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -19,25 +19,42 @@
 
 <div class="section">
     <div class="container-fluid header">
-        <div class="container h-100">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-8 h-100 p-0 d-flex flex-column justify-content-end">
-                        <div class="container p-0 mb-4 d-flex justify-content-between">
-                            <a href="#" class="text-white">My Account</a>
-                            <a href="#" class="text-white">My Account</a>
-                            <a href="#" class="text-white">My Account</a>
-                            <a href="#" class="text-white">My Account</a>
-                        </div>
-                    </div>
-                    <div class="col h-100 w-100 d-flex flex-column justify-content-center pr-0">
-                        <div class="container text-right">
+        <div class="container h-100 px-n">
+            <div class="container h-100 p-0 ">
+                <div class="row h-100 py-3">
+                    <div class="col-12 col-lg-4 d-flex flex-column justify-content-center">
+                        <div class="container p-0 ">
                             <h3 class="text-white">
                                 Hi Luna Alessia!
                             </h3>
-                            <span class="btn btn-dark px-4">Logout</span>
+                            <span class="btn btn-dark px-3 d-none d-lg-inline">Logout</span>
+                            <hr class="style1 border-white d-lg-none d-block">
                         </div>
                     </div>
+                    <div class="col-12 col-lg-8 d-flex flex-column justify-content-center justify-content-lg-end">
+                        <div class="container p-0 text-lg-center">
+                            <div class="row">
+                                <div class="col-12 col-lg py-1 py-lg-0">
+                                    <a href="#" class="text-white">My Account</a>
+                                </div>
+                                <div class="col-12 col-lg py-1 py-lg-0">
+                                    <a href="#" class="text-white">Orders</a>
+                                </div>
+                                <div class="col-12 col-lg py-1 py-lg-0">
+                                    <a href="#" class="text-white">Wishlist</a>
+                                </div>
+                                <div class="col-12 col-lg py-1 py-lg-0">
+                                    <a href="#" class="text-white">My reviews</a>
+                                </div>
+                                <div class="col-12 col-lg py-1 py-lg-0 d-block d-lg-none">
+                                    <a href="#" class="text-white">
+                                        <span class="badge badge-pill badge-dark py-2 px-3 float-right">Logout</span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
