--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -27,7 +27,9 @@
                             <h3 class="text-white">
                                 Hi Luna Alessia!
                             </h3>
-                            <span class="btn btn-dark px-3 d-none d-lg-inline">Logout</span>
+                            <button type="button" class="btn btn-dark rounded-pill">
+                                   Logout
+                                </button>
                             <hr class="style1 border-white d-lg-none d-block">
                         </div>
                     </div>
