Implementing shitty design page

--- a/public/dev/luna.html
+++ b/public/dev/luna.html
@@ -7,7 +7,7 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/scss/bootstrap/bobooky.css">
+    <link rel="stylesheet" href="/scss/bobooky.css">
     <link rel="stylesheet" href="/scss/components/carousel.css">
 
     <style>
