--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <title>Starter Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/scss/bootstrap/bobooky.css">
+
+    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/scss/components/navbar.css">
     <link rel="stylesheet" href="/scss/index/index.css">
     <link rel="stylesheet" href="/scss/components/carousel.css">
-
 </head>
 
 <body>
