--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -15,14 +15,14 @@
 
 </head>
 
-<body class="bg-dark">
+<body>
 
 <div class="nav-placeholder"></div>
 <div class="profile-header-placeholder"></div>
-<div class="section container main text-white">
+<div class="section container main text-dark">
     <div class="row">
         <div class="col-12 col-lg mt-5">
-            <h1 class="font-weight-bold text-secondary">About you</h1>
+            <h1 class="font-weight-bold">About you</h1>
             <div class="container mt-4">
                 <div class="row">
                     <div class="col-1 text-center">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-1 text-center ">
+                    <div class="col-1 text-center">
                         <i class="fa fa-at mr-1"></i>
                     </div>
                     <div class="col d-flex justify-content-center flex-column">
@@ -50,50 +50,15 @@
             </div>
         </div>
         <div class="col-12 col-lg mt-5">
-            <h1 class="font-weight-bold text-secondary">Your addresses</h1>
-            <div class="address container">
-                <div class="row">
-                    <div class="col">
-                        <div class="address template">
-                            <div class="default">
-                                <div class="card address template bg-transparent border-secondary my-4 w-100">
-                                    <div class="card-header bg-secondary">
-                                        Address title
-                                    </div>
-                                    <ul class="list-group list-group-flush">
-                                        <li class="list-group-item bg-transparent">Cras justo odio</li>
-                                        <li class="list-group-item bg-transparent">Dapibus ac facilisis in</li>
-                                        <li class="list-group-item bg-transparent"ì>Vestibulum at eros</li>
-                                    </ul>
-                                    <div class="card-footer text-muted p-1 bg-secondary">
-                                        <div class="actions text-right">
-                                            <button type="button" class="btn btn-secondary">
-                                                <i class="fa fa-ellipsis-h"></i>
-                                            </button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="actions d-none">
-                                <div class="card address template bg-secondary my-4 w-100">
-                                    <div class="card-header">
-                                        Actions
-                                    </div>
-                                    <div class="card-body">
-                                        <div>
-                                            <button type="button" class="btn btn-danger rounded-pill">Delete</button>
-                                        </div>
-                                        <div>
-                                            <button type="button" class="btn btn-danger rounded-pill">Edit</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <h1 class="font-weight-bold">Your addresses</h1>
+            <div class="container">
+                <div class="card bg-light mb-3" style="max-width: 18rem;">
+                    <div class="card-header">Header</div>
+                    <div class="card-body">
+                        <p class="card-text" style="font-size: 16px;">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
