--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -15,11 +15,11 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
 
 <div class="nav-placeholder"></div>
 <div class="profile-header-placeholder"></div>
-<div class="section container main text-dark">
+<div class="section container main text-white">
     <div class="row">
         <div class="col-12 col-lg mt-5">
             <h1 class="font-weight-bold">About you</h1>
@@ -52,7 +52,7 @@
         <div class="col-12 col-lg mt-5">
             <h1 class="font-weight-bold">Your addresses</h1>
             <div class="container">
-                <div class="card bg-light mb-3" style="max-width: 18rem;">
+                <div class="card bg-light mb-3 text-dark" style="max-width: 18rem;">
                     <div class="card-header">Header</div>
                     <div class="card-body">
                         <p class="card-text" style="font-size: 16px;">Some quick example text to build on the card title and make up the bulk of
