--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Registration Form</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/scss/bobooky-theme.css">
-    <link rel="stylesheet" href="/scss/components/navbar.css">
-    <link rel="stylesheet" href="scss/index.css">
-    <link rel="stylesheet" href="/components/profile-header/profile-header.css">
+    <link rel="stylesheet" href="../../assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="../../scss/bobooky-theme.css">
+    <link rel="stylesheet" href="../../scss/components/navbar.css">
+
+    <link rel="stylesheet" href="../../components/profile-header/profile-header.css">
+
 
 </head>
 
@@ -19,47 +20,57 @@
 
 <div class="nav-placeholder"></div>
 <div class="section container main text-white">
-    <div class="row">
+    <div class="row" id="registration-form">
         <div class="col-12 mt-5">
-            <h1 class="font-weight-bold text-secondary">Register</h1>
-            <div class="container mt-4 border border-secondary rounded" style="border-width: 2px !important;">
+            <h2 class="font-weight-bold text-warning mt-5">Welcome!</h2>
+            <!--border border-warning rounded-->
+            <div class="container mt-4" style="border-width: 2px !important;">
                 <form class="needs-validation" novalidate>
                     <div class="form-row">
-                        <div class="form-group col-12 col-sm-6">
+                        <div class="form-group col-12 col-md-6"> <!-- check le colonne -->
                             <label class="col-form-label-lg" for="inputName">Name</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Name" required>
+                            <input type="text" class="form-control text-warning" id="inputName" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid name.
                             </div>
                         </div>
-                        <div class="form-group col-12 col-sm-6">
+                        <div class="form-group col-12 col-md-6">
                             <label class="col-form-label-lg" for="inputSurname">Surname</label>
-                            <input type="text" class="form-control" id="inputSurname" placeholder="Surname" required>
+                            <input type="text" class="form-control text-warning" id="inputSurname" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid surname.
                             </div>
                         </div>
-                    </div>
-                    <div class="form-row">
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputEmail">Email</label>
-                            <input type="email" class="form-control" id="inputEmail" placeholder="Email" required>
-                            <div class="invalid-feedback">
-                                Please insert a valid email.
-                            </div>
-                        </div>
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputBirthDate">Birth date</label>
-                            <input type="date" class="form-control" id="inputBirthDate" placeholder="Birth date" required>
+                            <input type="date" class="col-6 form-control text-warning" id="inputBirthDate" placeholder="Birth date" required>
+
+                            <!-- new calendar -->
+                            <div class="dates mt-5">
+                                <label class="col-form-label-lg" for="usr1">Birth date</label>
+                                <input type="text" class="col-6 form-control text-warning" id="usr1" name="event_date" placeholder="yyyy-mm-dd" autocomplete="off" required >
+                            </div>
+
                             <div class="invalid-feedback">
                                 Please choose a valid date.
                             </div>
                         </div>
                     </div>
+                    <h2 class="font-weight-bold mt-5 mb-4 text-warning">Which is your...</h2>
+                    <div class="form-row">
+                        <div class="form-group col-12 col-sm-6">
+                            <label class="col-form-label-lg" for="inputEmail">Email</label>
+                            <input type="email" class="col-6 form-control text-warning" id="inputEmail" placeholder=" " required>
+                            <div class="invalid-feedback">
+                                Please insert a valid email.
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="form-row">
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputPassword">Password</label>
-                            <input type="password" class="form-control" id="inputPassword" placeholder="Password" required>
+                            <input type="password" class="col-6 form-control text-warning" id="inputPassword" placeholder="********" required>
                             <small id="passwordHelpBlock" class="form-text text-muted">
                                 Your password must be 8-20 characters long
                             </small>
@@ -68,15 +79,16 @@
                             </div>
                         </div>
                         <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputPasswordRepeated">Repeat Password</label>
-                            <input type="password" class="form-control" id="inputPasswordRepeated" placeholder="Password" required>
+                            <label class="col-form-label-lg" for="inputPasswordRepeated">Can you repeat it, please?</label>
+                            <input type="password" class="col-6 form-control text-warning" id="inputPasswordRepeated" placeholder="********" required>
                             <div class="invalid-feedback">
                                 Please repeat the password.
                             </div>
                         </div>
 
                         <div class="container mb-3">
-                            <button type="submit" class="btn btn-primary float-right">Submit</button>
+
+                            <button type="submit" class="btn btn-warning font-weight-bold rounded-pill my-5 float-right">Submit</button>
                         </div>
                     </div>
                 </form>
@@ -94,6 +106,10 @@
 <script src="/js/components/carousel.js" type="module"></script>
 <script src="/components/profile-header/profile-header.js"></script>
 
+<!-- calendar -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="/js/register/register.js"></script>
+
 <script>
     'use strict';
     $(() => {
@@ -110,6 +126,15 @@
     })
 </script>
 
+<!-- calendar -->
+<script>
+    $(function() {
+        $('.dates #usr1').datepicker({
+            'format': 'yyyy-mm-dd',
+            'autoclose': true
+        });
+    });
+</script>
 
 </body>
 </html>
