--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../../assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="../../scss/bobooky-theme.css">
     <link rel="stylesheet" href="../../scss/components/navbar.css">
-
     <link rel="stylesheet" href="../../components/profile-header/profile-header.css">
+    <link rel="stylesheet" href="scss/register.css">
 
 
 </head>
@@ -29,26 +29,26 @@
                     <div class="form-row">
                         <div class="form-group col-12 col-md-6"> <!-- check le colonne -->
                             <label class="col-form-label-lg" for="inputName">Name</label>
-                            <input type="text" class="form-control text-warning" id="inputName" placeholder=" " required>
+                            <input type="text" class="form-control bobooky text-warning" id="inputName" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid name.
                             </div>
                         </div>
                         <div class="form-group col-12 col-md-6">
                             <label class="col-form-label-lg" for="inputSurname">Surname</label>
-                            <input type="text" class="form-control text-warning" id="inputSurname" placeholder=" " required>
+                            <input type="text" class="form-control bobooky text-warning" id="inputSurname" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid surname.
                             </div>
                         </div>
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputBirthDate">Birth date</label>
-                            <input type="date" class="col-6 form-control text-warning" id="inputBirthDate" placeholder="Birth date" required>
+                            <input type="date" class="col-6 form-control bobooky text-warning" id="inputBirthDate" placeholder="Birth date" required>
 
                             <!-- new calendar -->
                             <div class="dates mt-5">
                                 <label class="col-form-label-lg" for="usr1">Birth date</label>
-                                <input type="text" class="col-6 form-control text-warning" id="usr1" name="event_date" placeholder="yyyy-mm-dd" autocomplete="off" required >
+                                <input type="text" class="col-6 form-control bobooky text-warning" id="usr1" name="event_date" placeholder="yyyy-mm-dd" autocomplete="off" required >
                             </div>
 
                             <div class="invalid-feedback">
@@ -60,7 +60,7 @@
                     <div class="form-row">
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputEmail">Email</label>
-                            <input type="email" class="col-6 form-control text-warning" id="inputEmail" placeholder=" " required>
+                            <input type="email" class="col-6 form-control bobooky text-warning" id="inputEmail" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid email.
                             </div>
@@ -70,7 +70,7 @@
                     <div class="form-row">
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputPassword">Password</label>
-                            <input type="password" class="col-6 form-control text-warning" id="inputPassword" placeholder="********" required>
+                            <input type="password" class="col-6 form-control bobooky text-warning" id="inputPassword" placeholder="********" required>
                             <small id="passwordHelpBlock" class="form-text text-muted">
                                 Your password must be 8-20 characters long
                             </small>
@@ -80,7 +80,7 @@
                         </div>
                         <div class="form-group col-12 col-sm-6">
                             <label class="col-form-label-lg" for="inputPasswordRepeated">Can you repeat it, please?</label>
-                            <input type="password" class="col-6 form-control text-warning" id="inputPasswordRepeated" placeholder="********" required>
+                            <input type="password" class="col-6 form-control bobooky text-warning" id="inputPasswordRepeated" placeholder="********" required>
                             <div class="invalid-feedback">
                                 Please repeat the password.
                             </div>
