Working on registration/login + cookies

--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -7,10 +7,9 @@
     <title>Registration Form</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="../../assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="../../scss/bobooky-theme.css">
-    <link rel="stylesheet" href="../../scss/components/navbar.css">
-    <link rel="stylesheet" href="../../components/profile-header/profile-header.css">
+    <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="/scss/bobooky-theme.css">
+    <link rel="stylesheet" href="/scss/components/navbar.css">
     <link rel="stylesheet" href="scss/register.css">
 
 
@@ -104,7 +103,6 @@
 <script src="/js/components/navbar.js"></script>
 <script src="/js/index/index.js" type="module"></script>
 <script src="/js/components/carousel.js" type="module"></script>
-<script src="/components/profile-header/profile-header.js"></script>
 
 <!-- calendar -->
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
