--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
-    <link rel="stylesheet" href="/scss/components/navbar.css">
+    <link rel="stylesheet" href="/components/navbar/navbar.css">
     <link rel="stylesheet" href="/scss/index/index.css">
     <link rel="stylesheet" href="/scss/components/carousel.css">
 </head>
@@ -78,7 +78,7 @@
 </div>
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/js/components/navbar.js"></script>
+<script src="/components/navbar/navbar.js"></script>
 <script src="/js/index/index.js" type="module"></script>
 <script src="/js/components/carousel.js" type="module"></script>
 
