Working on login

--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -66,19 +66,9 @@
 
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/components/navbar/navbar.js"></script>
+<script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/js/index/index.js" type="module"></script>
 <script src="/js/components/carousel.js" type="module"></script>
-
-<script>
-    $(() => {
-
-        let toggle = (o) => {
-            $(o).find('.default').toggleClass('d-none')
-            $(o).find('.actions').toggleClass('d-none')
-        }
-    })
-</script>
 
 
 </body>
