--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 </div>
 <script src="/jquery/dist/jquery.js"></script>
 <script src="/bootstrap/dist/js/bootstrap.js"></script>
-<script src="/components/navbar/navbar.js"></script>
+<script src="/components/navbar/navbar.js" type="module"></script>
 <script src="/js/index/index.js" type="module"></script>
 <script src="/js/components/carousel.js" type="module"></script>
 
