--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#books" role="button" data-slide="prev">
+            <a class="carousel-control-prev text-dark" href="#books" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
