--- a/public/profile/newaddress/index.html
+++ b/public/profile/newaddress/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Add new address</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/scss/components/navbar.css">
-    <link rel="stylesheet" href="scss/index.css">
+    <link rel="stylesheet" href="/scss/index.css">
     <link rel="stylesheet" href="/components/profile-header/profile-header.css">
 
 </head>
@@ -21,20 +21,24 @@
 <div class="section container main text-white">
     <div class="row">
         <div class="col-12 mt-5">
-            <h1 class="font-weight-bold text-secondary">New Address</h1>
+            <h2 class="font-weight-bold text-secondary">New Address</h2>
             <div class="container mt-4 border border-secondary rounded" style="border-width: 2px !important;">
                 <form class="needs-validation" novalidate>
+                    <div class="container p-3">
+                        <div class="form-row justify-content-end">
+                        <img class="py-4" src="../../assets/icon/stamp.svg" alt="stamp">
+                        </div>
                     <div class="form-row">
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputName">Name</label>
-                            <input type="text" class="bobooky form-control" id="inputName" placeholder="Name" required>
+                        <div class="form-group col-12 col-md-5 mr-auto">
+                            <label class="col-form-label-md" for="inputName">Name</label>
+                            <input type="text" class="form-control bobooky text-secondary" id="inputName" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Name cannot be empty.
                             </div>
                         </div>
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputSurname">Surname</label>
-                            <input type="text" class="bobooky form-control" id="inputSurname" placeholder="Surname" required>
+                        <div class="form-group col-12 col-md-5">
+                            <label class="col-form-label-md" for="inputSurname">Surname</label>
+                            <input type="text" class="bobooky form-control text-secondary" id="inputSurname" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Surname cannot be empty.
                             </div>
@@ -42,39 +46,40 @@
                     </div>
                     <div class="form-row">
                         <div class="form-group col-12">
-                            <label class="col-form-label-lg" for="addressLine1">Address</label>
-                            <input type="text" class="bobooky form-control" id="addressLine1" placeholder="Street and number" required>
+                            <label class="col-form-label-md" for="addressLine1">Address</label>
+                            <input type="text" class="bobooky form-control text-secondary" id="addressLine1" placeholder="Street and number" required>
                             <div class="invalid-feedback">
                                 Address cannot be empty
                             </div>
-                            <input type="text" class="bobooky form-control mt-2" id="addressLine2" placeholder="More details (optional)">
+                            <input type="text" class="bobooky form-control text-secondary mt-2" id="addressLine2" placeholder="More details (optional)">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-12 col-sm-4">
-                            <label class="col-form-label-lg" for="inputPostalCode">Postal Code</label>
-                            <input type="number" class="bobooky form-control" id="inputPostalCode" placeholder="postal code" required>
+                            <label class="col-form-label-md" for="inputPostalCode">Postal Code</label>
+                            <input type="number" class="bobooky form-control text-secondary" id="inputPostalCode" placeholder="20121" required>
                             <div class="invalid-feedback">
                                 Please insert a valid postal code.
                             </div>
                         </div>
                         <div class="form-group col-12 col-sm-4">
-                            <label class="col-form-label-lg" for="inputCity">City</label>
-                            <input type="text" class="bobooky form-control" id="inputCity" placeholder="city" required>
+                            <label class="col-form-label-md" for="inputCity">City</label>
+                            <input type="text" class="bobooky form-control text-secondary" id="inputCity" placeholder="Milan" required>
                             <div class="invalid-feedback">
                                 City cannot be empty.
                             </div>
                         </div>
                         <div class="form-group col-12 col-sm-4">
-                            <label class="col-form-label-lg" for="inputCountry">Country</label>
-                            <input type="text" class="bobooky form-control" id="inputCountry" placeholder="country" required>
+                            <label class="col-form-label-md" for="inputCountry">Country</label>
+                            <input type="text" class="bobooky form-control text-secondary" id="inputCountry" placeholder="Italy" required>
                             <div class="invalid-feedback">
                                 Country cannot be empty.
                             </div>
                         </div>
-
                         <div class="container mb-3">
-                            <button type="submit" class="btn btn-primary float-right">Submit</button>
+                            <button type="submit" class="btn btn-secondary text-dark font-weight-bold rounded-pill mt-5 float-right">Save</button>
+                        </div>
+
                         </div>
                     </div>
                 </form>
