--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/scss/components/navbar.css">
-    <link rel="stylesheet" href="scss/register.css">
+    <link rel="stylesheet" href="scss/calendar.css">
 
 
 </head>
@@ -26,40 +26,44 @@
             <div class="container mt-4" style="border-width: 2px !important;">
                 <form class="needs-validation" novalidate>
                     <div class="form-row">
-                        <div class="form-group col-12 col-md-6"> <!-- check le colonne -->
-                            <label class="col-form-label-lg" for="inputName">Name</label>
+                        <div class="form-group col-12 col-md-5 mr-4">
+                            <label class="col-form-label-md" for="inputName">Name</label>
                             <input type="text" class="form-control bobooky text-warning" id="inputName" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid name.
                             </div>
                         </div>
-                        <div class="form-group col-12 col-md-6">
-                            <label class="col-form-label-lg" for="inputSurname">Surname</label>
-                            <input type="text" class="form-control bobooky text-warning" id="inputSurname" placeholder=" " required>
-                            <div class="invalid-feedback">
-                                Please insert a valid surname.
-                            </div>
-                        </div>
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputBirthDate">Birth date</label>
-                            <input type="date" class="col-6 form-control bobooky text-warning" id="inputBirthDate" placeholder="Birth date" required>
-
-                            <!-- new calendar -->
-                            <div class="dates mt-5">
-                                <label class="col-form-label-lg" for="usr1">Birth date</label>
-                                <input type="text" class="col-6 form-control bobooky text-warning" id="usr1" name="event_date" placeholder="yyyy-mm-dd" autocomplete="off" required >
+                            <div class="form-group col-12 col-md-5">
+                                <label class="col-form-label-md" for="inputSurname">Surname</label>
+                                <input type="text" class="form-control bobooky text-warning" id="inputSurname" placeholder=" " required>
+                                <div class="invalid-feedback">
+                                    Please insert a valid surname.
+                                </div>
                             </div>
 
+                            <!-- old calendar
+                            <div class="form-group col-12 col-sm-6">
+                                <label class="col-form-label-md" for="inputBirthDate">Birth date</label>
+                                <input type="date" class="col-6 form-control bobooky text-warning" id="inputBirthDate" placeholder="Birth date" required>
+                            -->
+
+                            <div class="dates form-group col-12 col-md-5">
+                                <label class="col-form-label-md" for="usr1">Birth date</label>
+                                <input type="text" class="form-control bobooky text-warning" id="usr1" name="event_date" placeholder="yyyy-mm-dd" autocomplete="off" required >
+                            </div>
                             <div class="invalid-feedback">
                                 Please choose a valid date.
                             </div>
                         </div>
-                    </div>
-                    <h2 class="font-weight-bold mt-5 mb-4 text-warning">Which is your...</h2>
+                </form>
+                </div>
+            <h2 class="font-weight-bold mt-5 mb-4 text-warning">Which is your...</h2>
+            <div class="container mt-4" style="border-width: 2px !important;">
+                <form class="needs-validation" novalidate>
                     <div class="form-row">
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputEmail">Email</label>
-                            <input type="email" class="col-6 form-control bobooky text-warning" id="inputEmail" placeholder=" " required>
+                        <div class="form-group col-12 col-md-5">
+                            <label class="col-form-label-md" for="inputEmail">Email</label>
+                            <input type="email" class="form-control bobooky text-warning" id="inputEmail" placeholder=" " required>
                             <div class="invalid-feedback">
                                 Please insert a valid email.
                             </div>
@@ -67,9 +71,9 @@
 
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputPassword">Password</label>
-                            <input type="password" class="col-6 form-control bobooky text-warning" id="inputPassword" placeholder="********" required>
+                        <div class="form-group col-12 col-md-5 mr-4">
+                            <label class="col-form-label-md" for="inputPassword">Password</label>
+                            <input type="password" class="form-control bobooky text-warning" id="inputPassword" placeholder="********" required>
                             <small id="passwordHelpBlock" class="form-text text-muted">
                                 Your password must be 8-20 characters long
                             </small>
@@ -77,18 +81,18 @@
                                 Please insert a password.
                             </div>
                         </div>
-                        <div class="form-group col-12 col-sm-6">
-                            <label class="col-form-label-lg" for="inputPasswordRepeated">Can you repeat it, please?</label>
-                            <input type="password" class="col-6 form-control bobooky text-warning" id="inputPasswordRepeated" placeholder="********" required>
+                        <div class="form-group col-12 col-md-5">
+                            <label class="col-form-label-md" for="inputPasswordRepeated">Can you repeat it, please?</label>
+                            <input type="password" class="form-control bobooky text-warning" id="inputPasswordRepeated" placeholder="********" required>
                             <div class="invalid-feedback">
                                 Please repeat the password.
                             </div>
+
+                            <div class="container mb-3">
+                                <button type="submit" class="btn btn-warning font-weight-bold rounded-pill my-5 float-right">Submit</button>
+                            </div>
                         </div>
 
-                        <div class="container mb-3">
-
-                            <button type="submit" class="btn btn-warning font-weight-bold rounded-pill my-5 float-right">Submit</button>
-                        </div>
                     </div>
                 </form>
             </div>
