Fixed register form alignment, calendar dd-mm-yyyy

--- a/public/profile/register/index.html
+++ b/public/profile/register/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/scss/bobooky-theme.css">
     <link rel="stylesheet" href="/components/navbar/navbar.css">
+    <link rel="stylesheet" href="/profile/register/scss/calendar.css">
 
 </head>
 
@@ -19,10 +20,9 @@
 <div class="section container main text-white">
     <div class="row" id="registration-form">
         <div class="col-12 mt-5">
-            <h2 class="font-weight-bold text-warning mt-5">Welcome!</h2>
-            <!--border border-warning rounded-->
-            <div class="container mt-4" style="border-width: 2px !important;">
-                <form class="needs-validation form-yellow form-placeholder-white" id="register-form" novalidate>
+            <h2 class="font-weight-bold text-warning ml-3 mt-5 mb-4">Welcome!</h2>
+            <div class="container" style="border-width: 2px !important;">
+                <form class="needs-validation form-yellow" id="register-form" novalidate>
                     <div class="form-row">
                         <div class="form-group col-12 col-md-5 mr-4">
                             <label class="col-form-label-md" for="inputName">Name</label>
@@ -32,7 +32,8 @@
                                 Please insert a valid name.
                             </div>
                         </div>
-                        <div class="form-group col-12 col-md-5">
+
+                            <div class="form-group col-12 col-md-5">
                             <label class="col-form-label-md" for="inputSurname">Surname</label>
                             <input type="text" class="form-control bobooky text-warning" name="surname" id="inputSurname"
                                    placeholder=" " required>
@@ -47,10 +48,10 @@
                             <input type="date" class="col-6 form-control bobooky text-warning" id="inputBirthDate" placeholder="Birth date" required>
                         -->
 
-                        <div class="dates form-group col-12 col-md-5">
+                        <div class="dates form-group col-12 col-md-5 mt-md-3">
                             <label class="col-form-label-md" for="usr1">Birth date</label>
                             <input type="text" class="form-control bobooky text-warning" name="birthdate" id="usr1" name="event_date"
-                                   placeholder="yyyy-mm-dd" autocomplete="off" required>
+                                   placeholder="dd-mm-yyyy" autocomplete="off" required>
                         </div>
                         <div class="invalid-feedback">
                             Please choose a valid date.
@@ -70,7 +71,7 @@
                         </div>
 
                     </div>
-                    <div class="form-row">
+                    <div class="form-row mt-md-3">
                         <div class="form-group col-12 col-md-5 mr-4">
                             <label class="col-form-label-md" for="inputPassword">Password</label>
                             <input type="password" class="form-control bobooky text-warning" name="password" id="inputPassword"
@@ -91,7 +92,7 @@
                                 Please repeat the password.
                             </div>
 
-                            <div class="container mb-3">
+                            <div class="container pr-0 my-3">
                                 <button type="submit"
                                         class="btn btn-warning font-weight-bold rounded-pill my-5 float-right">Submit
                                 </button>
@@ -100,10 +101,10 @@
 
                     </div>
                 </form>
+
             </div>
         </div>
     </div>
-
 
 </div>
 
@@ -113,6 +114,8 @@
 <script src="/js/index/index.js" type="module"></script>
 <script src="/js/components/carousel.js" type="module"></script>
 <script src="register.js" type="module"></script>
+<script src="calendar.js" type="module"></script>
+
 <!--
 <script>
     'use strict';
@@ -134,12 +137,12 @@
 <script>
     $(function () {
         $('.dates #usr1').datepicker({
-            'format': 'yyyy-mm-dd',
+            'format': 'dd-mm-yyyy',
             'autoclose': true
         });
     });
 </script>
-calendar -->
+-->
 
 </body>
 </html>
