--- a/public/profile/account/index.html
+++ b/public/profile/account/index.html
@@ -49,26 +49,23 @@
         </div>
         <div class="col-12 col-lg mt-5">
             <h2 class="font-weight-bold text-secondary my-5">Your addresses</h2>
-            <div class="container">
-                <div class="card bg-dark mb-3 border border-secondary rounded text-white" style="font-size: 16px; max-width: 18rem; border-width: 2px !important;">
-                    <div class="card-header">Name Surname</div>
-                    <div class="card-body">
-                        <label class="col-form-label-md" id="addressLine1">Address line 1</label>
-                        <label class="col-form-label-md" id="addressLine2">Address line 2</label>
-                        <label class="col-form-label-md" id="inputPostalCode">Postal Code</label>
-                        <label class="col-form-label-md" id="inputCity">City</label>
-                        <label class="col-form-label-md" id="inputCountry">Country</label>
-                       <!--
-                        <p class="card-text" style="font-size: 16px;">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
-                            -->
+                <div class="container">
+                     <div class="card address-card bg-dark mb-3 border border-secondary text-white" style="font-size: 16px; max-width: 18rem; border-width: 2px !important;">
+                        <div class="card-header">Name Surname</div>
+                        <div class="card-body">
+                            <label class="col-form-label-md" id="addressLine1">Address line 1</label>
+                            <label class="col-form-label-md" id="addressLine2">Address line 2</label>
+                            <label class="col-form-label-md" id="inputPostalCode">Postal Code</label>
+                            <label class="col-form-label-md" id="inputCity">City</label>
+                            <label class="col-form-label-md" id="inputCountry">Country</label>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
-
-
+        <div class="col-12 col-md-4 mt-5">
+             <img class="pl-md-0" src="/assets/images/account_mailbox.svg" alt="mailbox" >
+        </div>
 </div>
 
 <script src="/jquery/dist/jquery.js"></script>
