Homepage searchbar / Carousel arrows

--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,11 @@
         <div class="row justify-content-center">
             <div class="col-lg-8 col-md-10 text-white">
                 <h3>What are you looking for?</h3>
-                <div class="form-group border-white mt-3 search-bar">
+                <div class=" form-group border-white mt-3 search-bar">
                     <div class="input-group input-group-lg">
-                        <input type="text" class="form-control text-white" placeholder="Search more than 700 books">
+                        <input type="text" class="form-control pl-4 text-light" placeholder="Search more than 700 books">
                         <div class="input-group-append">
-                            <button class="btn btn-outline-dark" type="button">
+                            <button class="btn round btn-outline-dark" type="button">
                                 <i class="fa fa-search text-white"></i>
                             </button>
                         </div>
@@ -39,16 +39,16 @@
     </div>
 </div>
 
-<div class="container col-lg-8 col-md-10 text-dark pb-4 pt-5 mt-5 bg-info">
+<div class="container col-lg-8 col-md-10 text-dark pb-4 pt-5 mt-5">
     <h3>What's new</h3>
 </div>
-<div class="section d-flex  flex-column bg-danger">
-    <div class="container min-vh-25 bg-success">
-        <div class="carousel slide multi-item-carousel" id="books">
+<div class="section d-flex flex-column">
+    <div class="container min-vh-25">
+        <div class="carousel slide multi-item-carousel mx-3" id="books">
             <div class="carousel-inner row mx-auto">
                 <div class="carousel-item template col-md-3">
-                    <div class="card book">
-                        <img class="card-img-top"
+                    <div class="card book bg-info">
+                         <img class="card-img-top"
                              src="https://images.gr-assets.com/books/1356422925l/13450339.jpg"
                              alt="Card image cap">
                         <div class="card-body">
@@ -58,7 +58,7 @@
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev text-dark" href="#books" role="button" data-slide="prev">
+            <a class="carousel-control-prev" href="#books" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
             </a>
